[gd_scene load_steps=18 format=3 uid="uid://sro5i0eudl8e"]

[ext_resource type="Script" path="res://scripts/bubble.gd" id="1_180ry"]
[ext_resource type="Texture2D" uid="uid://cknpqiecnec3r" path="res://assets/sprites/bubbles/bubble3.png" id="2_rynag"]
[ext_resource type="Texture2D" uid="uid://ecemm5ba4gm4" path="res://assets/sprites/bubbles/bubble3_burst.png" id="3_fpkp0"]
[ext_resource type="Texture2D" uid="uid://boytgtfhob70h" path="res://assets/sprites/bubbles/bubble1_burst.png" id="4_aq3jb"]
[ext_resource type="Texture2D" uid="uid://dn2uht2bckqb4" path="res://assets/sprites/bubbles/bubble3_damage.png" id="5_rmqet"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r3vu5"]
atlas = ExtResource("3_fpkp0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5g1vi"]
atlas = ExtResource("3_fpkp0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hvub"]
atlas = ExtResource("3_fpkp0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xshs6"]
atlas = ExtResource("4_aq3jb")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2k1st"]
atlas = ExtResource("5_rmqet")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaci7"]
atlas = ExtResource("5_rmqet")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_msb0u"]
atlas = ExtResource("5_rmqet")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kn5fi"]
atlas = ExtResource("5_rmqet")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ksud"]
atlas = ExtResource("5_rmqet")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6087"]
atlas = ExtResource("2_rynag")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0hj4u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3vu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g1vi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hvub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xshs6")
}],
"loop": false,
"name": &"burst",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2k1st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iaci7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msb0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kn5fi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ksud")
}],
"loop": false,
"name": &"damage",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6087")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_agpxj"]

[node name="Bubble 3" type="CharacterBody2D"]
script = ExtResource("1_180ry")
hp = 4
speed = 32

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0hj4u")
animation = &"burst"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_agpxj")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_bubble_3_animation_finished"]
