[gd_scene load_steps=18 format=3 uid="uid://oe76c6i2q41q"]

[ext_resource type="Script" path="res://scripts/bubble.gd" id="1_xb28x"]
[ext_resource type="Texture2D" uid="uid://y30wt6qxbomg" path="res://assets/sprites/bubbles/bubble6.png" id="2_m2ubc"]
[ext_resource type="Texture2D" uid="uid://oexpig2t1xje" path="res://assets/sprites/bubbles/bubble6_burst.png" id="3_ntnxy"]
[ext_resource type="Texture2D" uid="uid://boytgtfhob70h" path="res://assets/sprites/bubbles/bubble1_burst.png" id="4_2ldu7"]
[ext_resource type="Texture2D" uid="uid://ccvre7c83k60e" path="res://assets/sprites/bubbles/bubble6_damage.png" id="5_vgywk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_auwlb"]
atlas = ExtResource("3_ntnxy")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsxlf"]
atlas = ExtResource("3_ntnxy")
region = Rect2(42, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnnu2"]
atlas = ExtResource("3_ntnxy")
region = Rect2(84, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_xshs6"]
atlas = ExtResource("4_2ldu7")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_attv5"]
atlas = ExtResource("5_vgywk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x6te"]
atlas = ExtResource("5_vgywk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2v7r"]
atlas = ExtResource("5_vgywk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qgaa"]
atlas = ExtResource("5_vgywk")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6228y"]
atlas = ExtResource("5_vgywk")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fnwo"]
atlas = ExtResource("2_m2ubc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gx1xc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_auwlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsxlf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnnu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xshs6")
}],
"loop": false,
"name": &"burst",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_attv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3x6te")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2v7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qgaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6228y")
}],
"loop": false,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fnwo")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_agpxj"]
radius = 16.0

[node name="Bubble 6" type="CharacterBody2D"]
script = ExtResource("1_xb28x")
hp = 10
speed = 20

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gx1xc")
animation = &"damage"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_agpxj")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_bubble_6_animation_finished"]
